# McFACTS

./: .gitignore  CHANGELOG.md  IOdocumentation.txt  MANIFEST.in  Makefile  Manifest.toml  Project.toml  README.md  mstar.prof  mstar_fixed.prof  mstar_profile.prof  optimized.txt  pyproject.toml  setup.py  si.prof  si_optimized.prof
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: run_tests.yml
docs/: cook_docs.txt  testfile.txt
docs/source/: MM_documentation.rst  cite.rst  commitmsg.rst  contribute.rst  index.rst  installation.rst  newio.rst  style.rst
notebook/: gas_drag.ipynb
notebooks/: bondi_tester.ipynb  ecc_v_time.ipynb  galaxy_tester.ipynb  gas_drag.ipynb
recipes/: default_settings.txt  model_choice.ini  model_choice_emri.ini  model_choice_old.ini  pAGN_test.ini
recipes/paper_3/: p3_fixed.ini  p3_pAGN_off.ini  p3_pAGN_on.ini  p3_scale.ini
recipes/paper_4/: pem_sg_default.ini  pem_sg_g1.ini  pem_sg_g25.ini  pem_sg_gpeak.ini  pem_sg_r2e4.ini  pem_sg_r3e4.ini  pem_sg_r7e4.ini  pem_sg_spin_dist_sigma_02.ini  pem_sg_spin_dist_sigma_2.ini  pem_sg_tagn_025Myr.ini  pem_sg_tagn_1Myr.ini  pem_sg_turb01.ini  pem_sg_turb1.ini  pem_sg_turb2.ini  pem_tqm_default.ini  pem_tqm_g1.ini  pem_tqm_g25.ini  pem_tqm_gpeak.ini  pem_tqm_r3e4.ini  pem_tqm_r7e4.ini  pem_tqm_spin_dist_sigma_02.ini  pem_tqm_spin_dist_sigma_2.ini  pem_tqm_tagn_025Myr.ini  pem_tqm_tagn_1Myr.ini  pem_tqm_turb01.ini  pem_tqm_turb1.ini  pem_tqm_turb2.ini
recipes/paper_em/: pem_sg_default.ini  pem_sg_g1.ini  pem_sg_g25.ini  pem_sg_r2e4.ini  pem_sg_r7e4.ini  pem_sg_spin_dist_sigma_02.ini  pem_sg_spin_dist_sigma_2.ini  pem_sg_tagn_025Myr.ini  pem_sg_tagn_075Myr.ini  pem_sg_tagn_1Myr.ini  pem_sg_tagn_2Myr.ini  pem_sg_turb01.ini  pem_sg_turb1.ini  pem_sg_turb2.ini  pem_tqm_default.ini  pem_tqm_g1.ini  pem_tqm_g25.ini  pem_tqm_r2e4.ini  pem_tqm_r7e4.ini  pem_tqm_spin_dist_sigma_02.ini  pem_tqm_spin_dist_sigma_2.ini  pem_tqm_tagn_025Myr.ini  pem_tqm_tagn_075Myr.ini  pem_tqm_tagn_1Myr.ini  pem_tqm_tagn_2Myr.ini
recipes/paper_event/: cosmic_segregated.ini  default_imf.ini  gaussian.ini  pareto_segregated.ini  power_2_5.ini
scripts/: EM_plot.py  LSST_plot.py  bondi_plots.py  compare_plots.py  disk_mass_plots.py  em_plots.py  generate_disk_param_files_from_pagn.py  mcfacts_sim.py  orba_dist_movie_frames.py  plot_disk_properties.py  population_plots.py  rates_vs_z.py  star_bh_movie_frames.py  stars_plots.py  vera_mstar_bins.py
scripts/sxs/: evolve_mcfacts.py  example.py
scripts/tests/: crude_retro_evol_test.py  encounters_optimization_tests.py  retro_mig_test.py  tests.py
src/: juliapkg.json.bak
src/mcfacts/: fiducial_plots.py  mcfacts.py  (+2 more)
tests/: Test_test.py  accretion_test.py  analytical_kick_test.py  bh_change_mass_outputs.csv  cube_stars_optimization_test.py  encounters_optimization_test.py  gw_strain_test.py  jet_luminosity_test.py  merged_orb_test.py  powerlaw_inputs.csv  powerlaw_test.py  shock_luminosity_test.py  tau_dyn_test.py  test_change_bh_spin_angles.py  test_change_bh_spin_magnitudes.py  test_change_bh_spins.py  test_feedback.py  torque_test.py  z_analytical_kick_test.py  z_powerlaw_test.py
(+83 files in other folders)
