[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# Data files that are packaged must be included in the MANIFEST.in file
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
"Homepage" = "https://github.com/bmckernan/test_mcfacts"
"Bug Reports" = "https://github.com/bmckernan/test_mcfacts/issues"
"Source" = "https://github.com/bmckernan/test_mcfacts"

[project]
name = "mcfacts"
readme = "README.md"
license = {file = "LICENSE.txt"}
keywords = [
    "astronomy",
    "information analysis",
    "machine learning",
    "physics"
]

# How do we want to do author ordering, if at all?
authors = [
    {name = "Barry McKernan", email = "enter@email.com"},
    {name = "Saavik Ford"},
    {name = "Harry Cook"},
    {name = "Vera Delfavero"},
    {name = "Richard O'Shaughnessy"},
    {name = "Jake Postiglione"},
    {name = "Kaila Nathaniel"},
    {name = "Shawn Ray"},
    {name = "Emily McPike"}
]

# In the future, the people actively developing / maintaining the project may be different!
maintainers = [
    {name = "Barry McKernan", email = "enter@email.com"},
    {name = "Saavik Ford"},
    {name = "Harry Cook"},
    {name = "Vera Delfavero"},
    {name = "Richard O'Shaughnessy"},
    {name = "Jake Postiglione"},
    {name = "Kaila Nathaniel"},
    {name = "Shawn Ray"},
    {name = "Emily McPike"}
]

classifiers = [
"Development Status :: 3 - Alpha",
"Programming Language :: Python :: 3",
"Operating System :: OS Independent",
"Intended Audience :: Science/Research",
"Topic :: Scientific/Engineering :: Astronomy",
"Topic :: Scientific/Engineering :: Physics",
"Topic :: Scientific/Engineering :: Information Analysis",
]

requires-python = ">= 3.10"

dependencies = [
    "PyYAML==6.0.3",
    "astropy==7.1.0",
    "astropy-iers-data==0.2025.9.22.0.37.25",
    "bibtexparser==2.0.0b8",
    "certifi==2025.8.3",
    "charset_normalizer==3.4.3",
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "filelock==3.19.1",
    "fonttools==4.60.0",
    "h5py==3.14.0",
    "idna==3.10",
    "inflection==0.5.1",
    "joblib==1.5.2",
    "juliacall==0.9.28",
    "juliapkg==0.1.20",
    "kiwisolver==1.4.9",
    "llvmlite==0.45.0",
    "matplotlib==3.10.6",
    "numba==0.62.0",
    "numpy==2.3.3",
    "pagn==1.0.0",
    "pandas==2.3.2",
    "pillow==11.3.0",
    "pyerfa==2.0.1.5",
    "pylatexenc==2.10",
    "pyparsing==3.2.5",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "quaternionic==1.0.17",
    "requests==2.32.5",
    "scikit_learn==1.7.2",
    "scipy==1.16.2",
    "semver==3.0.4",
    "six==1.17.0",
    "spherical==1.0.18",
    "spinsfast==2022.4.10",
    "sxs==2025.0.19",
    "sxscatalog==3.0.17",
    "threadpoolctl==3.6.0",
    "tomlkit==0.13.3",
    "tqdm==4.67.1",
    "tzdata==2025.2",
    "uncertainties==3.2.3",
    "urllib3==2.5.0",
]

#TODO: Add description and other dynamically defined variables created in setup.py
dynamic = [ "version" ]

[tool.pytest.ini_options]
pythonpath = "src"
